force-app/main/default/objects/Transaction__c/fields/Email1__c.field-meta.xml
<CustomField>
    <fullName>Email1__c</fullName>
    <formula>Invoices__r.Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email1</label>
    <type>Text</type>
</CustomField>