force-app/main/default/objects/Transaction__c/fields/Email_ID_for_Contact__c.field-meta.xml
<CustomField>
    <fullName>Email_ID_for_Contact__c</fullName>
    <formula>Invoices__r.Email_ID_for_Contact__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email ID for Contact</label>
    <type>Text</type>
</CustomField>